public/css/all.css
/* ... */
.overlay-bg h3 {
  color: #ffffff;
  font-family: 'Lemon Bold';
}

.down {
  position: absolute;
  bottom: 20px;
  left: 50%;
  z-index: 2;
  display: inline-block;
  -webkit-transform: translate(0, -50%);
  transform: translate(-50%, -50%);
  /* transform: translate(0, -50%); */
  text-decoration: none;
  color: rgb(255, 255, 255);
  letter-spacing: 2px;
  font-size: 1.2em;
  font-family: 'Lemon Bold';
  text-transform: uppercase;
  font-weight: 500;
}
.down {
  padding-top: 70px;
}
.down span {
  position: absolute;
  top: 0;
  left: 50%;
  width: 24px;
  height: 24px;
  margin-left: -12px;
  border-left: 1px solid rgb(255, 255, 255);
  border-bottom: 1px solid rgb(255, 255, 255);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-animation: sdb 1.5s infinite;
  animation: sdb 1.5s infinite;
  box-sizing: border-box;
}
@-webkit-keyframes sdb {
  0% {
    -webkit-transform: rotate(-45deg) translate(0, 0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    -webkit-transform: rotate(-45deg) translate(-20px, 20px);
    opacity: 0;
  }
}
@keyframes sdb {
  0% {
    transform: rotate(-45deg) translate(0, 0);
    opacity: 0;
  }
  50% {
    opacity: 1;
  }
  100% {
    transform: rotate(-45deg) translate(-20px, 20px);
    opacity: 0;
  }
}

@media screen and (max-width: 320px) {
  /* body {
    background-color: red;
  } */

  .filters {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
  }

  .filters .container-in {
    display: flex;
    justify-content: space-between;
    gap: 20px;
  }

  .filters .option-general {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 15px 20px;
    margin: 0;
  }

  .col-md-3.in18-content {
    position: absolute;
    top: -5px;
    right: 0;
  }

  .img_logo_unicus {
    position: absolute;
    top: -15px;
    left: 0;
  }

  .img_logo_unicus img {
    width: 30px;
  }

  .col-md-3.in18-content .in18 {
    font-size: 12px;
  }

  .bottomfooter p {
    margin-right: 0px;
    margin-bottom: 12px;
    display: block;
    font-size: 12px !important;
  }

  .end .row {
    display: flex;
    justify-content: space-between;
  }

  .navbar-header {
    display: flex;
    /* justify-content: space-between; */
    align-items: center;
    justify-content: center;
    margin: 12px 0;
  }

  .navbar-header button {
    margin: 0;
    border: 1px solid #fff;
  }

  .navbar-toggle .icon-bar {
    background-color: #fff !important;
  }

  /* .nav_links_unicus {
    justify-content: center;
  } */

  .showcase .overlay .social-nav {
    border-left: 1px solid transparent;
    position: relative;
    width: 100%;
    text-align: center;
    padding-top: 5%;
  }

  .showcase .overlay .social-nav a {
    display: inline-block;
  }

  .text-showcase {
    text-align: center;
    padding-top: 70%;
  }

  .text-showcase p {
    font-size: 45px;
  }

  .about-text p {
    padding: 0 24px;
  }

  /* PROJECTS */
  .work-grid {
    padding: 0 !important;
  }

  .work-grid .row {
    margin-left: -15px !important;
  }

  .work-grid .col-md-6,
  .work-grid .col-md-4 {
    height: 300px;
  }

  .title-project {
    width: 70%;
    padding: 15px 20px;
  }

  /* We Are */

  .weare {
    padding: 20px 0;
  }

  .weare h1 {
    font-size: 30px;
    padding: 0 20px;
  }

  .weare .col-md-3 {
    display: none;
    padding: 10px;
  }

  .weare .col-md-9::after {
    height: 150px;
  }

  .overlay-bg {
    top: -10px;
  }
  .overlay-bg h3 {
    font-size: 25px;
  }

  .weare-one,
  .weare-two {
    margin-bottom: 60px;
  }

  /* By Project */
  .showcase-p {
    height: 300px;
  }

  .title-one{
    padding: 20px 0;
  }

  .title-one h4{
    font-size: 20px;
    margin-bottom: 10px;
  }

  .description {
    padding: 40px 20px;
  }
}
/* ... */

